Integração com funcionalidade de favoritos

--- a/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
+++ b/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
@@ -11,9 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="icon" href="./Assets/Images/icon.png">
-    <link rel="stylesheet" href="../../Sprint-2 - Posição do onibus em tempo real/Styles/index.css" />
+    <link rel="stylesheet" href="../../Sprint-2/Styles/index.css" />
     <link rel="stylesheet" href="../Styles/perfil.css">
-    <script src="../../Sprint-2 - Posição do onibus em tempo real/Scripts/base.js" defer></script>
+    <script src="../../Sprint-2/Scripts/base.js" defer></script>
     <script src="../Scripts/login.js" defer></script>
     <title>Buzzão - Área de usuário</title>
 
@@ -21,7 +21,7 @@
     <script>
         window.addEventListener('load', () => {
             document.querySelector('#sair').addEventListener('click', logoutUser);
-            
+
             let usuarioLogin = JSON.parse(sessionStorage.getItem('usuarioCorrente'));
             document.querySelector("#btn_login").innerText = usuarioLogin.login;
         });
@@ -48,9 +48,8 @@
                     <ul class="menu_horizontal">
                         <li><a href="#">Sobre nós</a></li>
                         <li><a href="#">Feedback</a></li>
-                        <li><a id="btn_login" href="#">/a></li>
-                        <li><a href="#"><img id="icon" src="../../../../Assets/Images/sun-solid.svg"
-                                    alt="Modo de exibição"></a></li>
+                        <li><a id="btn_login" href="#" title="Botão de login"></a></li>
+                        <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a></li>
                     </ul>
 
                 </nav>
