--- a/codigo/index.html
+++ b/codigo/index.html
@@ -19,16 +19,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
   <link rel="icon" href="./Assets/Images/icon.png">
-  <link rel="stylesheet" href="./Modules/Guilherme Costa/Sprint-2 - Posição do onibus em tempo real/Styles/index.css" />
-  <link rel="stylesheet" href="./Modules/Arthur Bretas/Sprint-2 - Card de linha de ônibus/Styles/card.css">
-  <script src="./Modules/Guilherme Costa/Sprint-2 - Posição do onibus em tempo real/Scripts/base.js" defer></script>
-  <script type="module" src="./Modules/Guilherme Costa/Sprint-2 - Posição do onibus em tempo real/Scripts/index.js"
-    defer></script>
-  <script type="module" src="./Modules/Arthur Bretas/Sprint-2 - Card de linha de ônibus/Script/favoritos.js"
-    defer></script>
-  <script type="module"
-    src="./Modules/Guilherme Costa/Sprint-3 - Página de login e perfil do usuário/Scripts/verifica_usuario.js"
-    defer></script>
+  <link rel="stylesheet" href="./Modules/Guilherme Costa/Sprint-2/Styles/index.css" />
+  <link rel="stylesheet" href="./Modules/Arthur Bretas/Sprint-2/Styles/card.css">
+  <script src="./Modules/Guilherme Costa/Sprint-2/Scripts/base.js" defer></script>
+  <script type="module" src="./Modules/Guilherme Costa/Sprint-2/Scripts/index.js" defer></script>
+  <script type="module" src="./Modules/Arthur Bretas/Sprint-2/Script/favoritos.js" defer></script>
+  <script type="module" src="./Modules/Guilherme Costa/Sprint-3/Scripts/verifica_usuario.js" defer></script>
   <title>Buzzão - Localização de ônibus</title>
 </head>
 
@@ -52,7 +48,7 @@
             <li><a href="#">Sobre nós</a></li>
             <li><a href="#">Feedback</a></li>
             <li><a id="btn_login" href="#">Login</a></li>
-            <li><a href="#"><img id="icon" src="./Assets/Images/sun-solid.svg" alt="Icone modo de exibição de site"></a>
+            <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
             </li>
           </ul>
 
@@ -90,10 +86,9 @@
       </div>
     </div>
 
-    <!-- todo: inserir no card gerado pelo Arthur -->
     <!-- Card de pesquisa linha de ônibus -->
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 area_card">
 
         <div id="card">
           <div class="card-body">
