--- a/codigo/Modules/Guilherme Costa/Sprint-3/HTML/login.html
+++ b/codigo/Modules/Guilherme Costa/Sprint-3/HTML/login.html
@@ -10,14 +10,13 @@
     <!-- Font Awesome > para menus em formato mobile -->
     <script src="https://kit.fontawesome.com/71d3c4b2e6.js" crossorigin="anonymous"></script>
     <link rel="icon" href="./Assets/Images/icon.png">
-    <link rel="stylesheet" href="../../Sprint-2 - Posição do onibus em tempo real/Styles/index.css" />
-    <link rel="stylesheet"
-        href="../../../Guilherme Costa/Sprint-3 - Página de login e perfil do usuário/Styles/login.css">
-    <script src="../../../Guilherme Costa/Sprint-2 - Posição do onibus em tempo real/Scripts/base.js" defer></script>
-    <script src="../../../Guilherme Costa/Sprint-3 - Página de login e perfil do usuário/Scripts/login.js"></script>
+    <link rel="stylesheet" href="../../Sprint-2/Styles/index.css" />
+    <link rel="stylesheet" href="../Styles/login.css">
+    <script src="../../Sprint-2/Scripts/base.js" defer></script>
+    <script src="../Scripts/login.js"></script>
     <title>Buzzão - Login</title>
 </head>
- 
+
 <body>
     <header class="container-fluid">
 
@@ -39,7 +38,7 @@
                         <li><a href="#">Sobre nós</a></li>
                         <li><a href="#">Feedback</a></li>
                         <li><a href="login.html">Login</a></li>
-                        <li><a href="#"><img id="icon" src="../../../../Assets/Images/sun-solid.svg"
+                        <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg"
                                     alt="Modo de exibição"></a></li>
                     </ul>
 
