Integração com feedback

--- a/codigo/Modules/Guilherme Costa/Sprint-3/HTML/login.html
+++ b/codigo/Modules/Guilherme Costa/Sprint-3/HTML/login.html
@@ -9,7 +9,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Font Awesome > para menus em formato mobile -->
     <script src="https://kit.fontawesome.com/71d3c4b2e6.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="./Assets/Images/icon.png">
+    <link rel="icon" href="../../../../Assets/Images/icon.png">
     <link rel="stylesheet" href="../../Sprint-2/Styles/index.css" />
     <link rel="stylesheet" href="../Styles/login.css">
     <script src="../../Sprint-2/Scripts/base.js" defer></script>
@@ -36,7 +36,7 @@
 
                     <ul class="menu_horizontal">
                         <li><a href="#">Sobre nós</a></li>
-                        <li><a href="#">Feedback</a></li>
+                        <li><a href="../../../Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
                         <li><a href="login.html">Login</a></li>
                         <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg"
                                     alt="Modo de exibição"></a></li>
