--- a/codigo/index.html
+++ b/codigo/index.html
@@ -46,7 +46,7 @@
 
           <ul class="menu_horizontal">
             <li><a href="#">Sobre nós</a></li>
-            <li><a href="#">Feedback</a></li>
+            <li><a href="Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
             <li><a id="btn_login" href="#">Login</a></li>
             <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
             </li>
@@ -63,8 +63,7 @@
     <dialog>
       <h5>Linha inválida</h5>
       <p>Não encontramos essa linha em nossa base de dados. Para sugerir sua inclusão, acesse a página de <a
-          href="#">FeedBack.</a></p>
-      <!-- todo: inserir link para a pagina gerada pelo Renato -->
+          href="./Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback2.html">FeedBack.</a></p>
       <button>Fechar</button>
     </dialog>
 
