--- a/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
+++ b/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
@@ -10,7 +10,7 @@
     <!-- Instalação bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-    <link rel="icon" href="./Assets/Images/icon.png">
+    <link rel="icon" href="../../../../Assets/Images/icon.png">
     <link rel="stylesheet" href="../../Sprint-2/Styles/index.css" />
     <link rel="stylesheet" href="../Styles/perfil.css">
     <script src="../../Sprint-2/Scripts/base.js" defer></script>
@@ -47,7 +47,7 @@
 
                     <ul class="menu_horizontal">
                         <li><a href="#">Sobre nós</a></li>
-                        <li><a href="#">Feedback</a></li>
+                        <li><a href="../../../Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
                         <li><a id="btn_login" href="#" title="Botão de login"></a></li>
                         <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a></li>
                     </ul>
