--- a/codigo/index.html
+++ b/codigo/index.html
@@ -45,7 +45,7 @@
           </label>
 
           <ul class="menu_horizontal">
-            <li><a href="#">Sobre nós</a></li>
+            <li><a href="sobre.html">Sobre nós</a></li>
             <li><a href="Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
             <li><a id="btn_login" href="#">Login</a></li>
             <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
