Consolidação dos codigos

--- a/codigo/Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html
+++ b/codigo/Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html
@@ -16,7 +16,7 @@
   <script src="../../../Guilherme Costa/Sprint-2/Scripts/base.js" defer></script>
   <script type="module" src="../../../Guilherme Costa/Sprint-3/Scripts/verifica_usuarioFeedback.js" defer></script>
   <script src="../Scripts/feedback.js" defer></script>
-  <title>Buzzão - Localização de ônibus</title>
+  <title>Buzzão - Feedback</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
           </label>
 
           <ul class="menu_horizontal">
-            <li><a href="#">Sobre nós</a></li>
+            <li><a href="../../../../sobre.html">Sobre nós</a></li>
             <li><a href="feedback.html">Feedback</a></li>
             <li><a id="btn_login" href="#">Login</a></li>
             <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
