--- a/codigo/sobre.html
+++ b/codigo/sobre.html
@@ -12,11 +12,10 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
   <link rel="icon" href="./Assets/Images/icon.png">
   <link rel="stylesheet" href="./Modules/Guilherme Costa/Sprint-2/Styles/index.css" />
-  <link rel="stylesheet" href="sobre.css">
+  <link rel="stylesheet" href="./Modules/Guilherme Costa/Sprint-2/Styles/sobre.css">
   <script src="./Modules/Guilherme Costa/Sprint-2/Scripts/base.js" defer></script>
   <script type="module" src="./Modules/Guilherme Costa/Sprint-2/Scripts/index.js" defer></script>
-  <!-- todo: criar novo JS de verificar usuario no SOBRE -->
-  <script type="module" src="./Modules/Guilherme Costa/Sprint-3/Scripts/verifica_usuarioFeedback.js" defer></script>
+  <script type="module" src="./Modules/Guilherme Costa/Sprint-3/Scripts/verifica_usuario.js"></script>
   <title>Buzzão - Sobre</title>
 </head>
 
