--- a/codigo/Modules/Guilherme Costa/Sprint-3/HTML/login.html
+++ b/codigo/Modules/Guilherme Costa/Sprint-3/HTML/login.html
@@ -35,7 +35,7 @@
                     </label>
 
                     <ul class="menu_horizontal">
-                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="../../../../sobre.html">Sobre nós</a></li>
                         <li><a href="../../../Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
                         <li><a href="login.html">Login</a></li>
                         <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg"
