--- a/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
+++ b/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
@@ -35,7 +35,7 @@
             <div class="col-12">
                 <nav>
 
-                    <a href="../../../../index.html"><img src="../../../../Assets/Images/logo_buzzao.png"
+                    <a href="../../../../../index.html"><img src="../../../../Assets/Images/logo_buzzao.png"
                             alt="Logo Buzzão" class="logo_buzzao" /></a>
 
                     <!-- Botoes para responsividade em dispositivos mobile -->
