--- a/codigo/sobre.html
+++ b/codigo/sobre.html
@@ -26,7 +26,7 @@
       <div class="col-12">
         <nav>
 
-          <a href="index.html"><img src="./Assets/Images/logo_buzzao.png" alt="Logo Buzzão" class="logo_buzzao" /></a>
+          <a href="../index.html"><img src="./Assets/Images/logo_buzzao.png" alt="Logo Buzzão" class="logo_buzzao" /></a>
 
           <!-- Botões para responsividade em dispositivos mobile -->
           <input type="checkbox" id="check" placeholder="Botao de check - versao mobile" />
