--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <!-- Instação bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-  <link rel="icon" href="./Assets/Images/icon.png">
-  <link rel="stylesheet" href="./Modules/Guilherme Costa/Sprint-2/Styles/index.css" />
-  <link rel="stylesheet" href="./Modules/Arthur Bretas/Sprint-2/Styles/card.css">
-  <script src="./Modules/Guilherme Costa/Sprint-2/Scripts/base.js" defer></script>
-  <script type="module" src="./Modules/Guilherme Costa/Sprint-2/Scripts/index.js" defer></script>
-  <script type="module" src="./Modules/Arthur Bretas/Sprint-2/Script/favoritos.js" defer></script>
-  <script type="module" src="./Modules/Guilherme Costa/Sprint-3/Scripts/verifica_usuario.js" defer></script>
+  <link rel="icon" href="./codigo/Assets/Images/icon.png">
+  <link rel="stylesheet" href="./codigo/Modules/Guilherme Costa/Sprint-2/Styles/index.css" />
+  <link rel="stylesheet" href="./codigo/Modules/Arthur Bretas/Sprint-2/Styles/card.css">
+  <script src="./codigo/Modules/Guilherme Costa/Sprint-2/Scripts/base.js" defer></script>
+  <script type="module" src="./codigo/Modules/Guilherme Costa/Sprint-2/Scripts/index.js" defer></script>
+  <script type="module" src="./codigo/Modules/Arthur Bretas/Sprint-2/Script/favoritos.js" defer></script>
+  <script type="module" src="./codigo/Modules/Guilherme Costa/Sprint-3/Scripts/verifica_usuario.js" defer></script>
   <title>Buzzão - Localização de ônibus</title>
 </head>
 
@@ -35,7 +35,7 @@
       <div class="col-12">
         <nav>
 
-          <a href="index.html"><img src="./Assets/Images/logo_buzzao.png" alt="Logo Buzzão" class="logo_buzzao" /></a>
+          <a href="index.html"><img src="./codigo/Assets/Images/logo_buzzao.png" alt="Logo Buzzão" class="logo_buzzao" /></a>
 
           <!-- Botões para responsividade em dispositivos mobile -->
           <input type="checkbox" id="check" placeholder="Botao de check - versao mobile" />
@@ -45,8 +45,8 @@
           </label>
 
           <ul class="menu_horizontal">
-            <li><a href="sobre.html">Sobre nós</a></li>
-            <li><a href="Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
+            <li><a href="./codigo/sobre.html">Sobre nós</a></li>
+            <li><a href="./codigo/Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
             <li><a id="btn_login" href="#">Login</a></li>
             <li><a href="#"><img id="icon" src="/codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
             </li>
