Revisao icones modo light e dark

--- a/codigo/Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html
+++ b/codigo/Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html
@@ -40,7 +40,7 @@
             <li><a href="../../../../sobre.html">Sobre nós</a></li>
             <li><a href="feedback.html">Feedback</a></li>
             <li><a id="btn_login" href="#">Login</a></li>
-            <li><a href="#"><img id="icon" src="codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
+            <li><a href="#"><img id="icon" src="../../../../Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
             </li>
           </ul>
 
