--- a/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
+++ b/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
@@ -49,7 +49,7 @@
                         <li><a href="../../../../sobre.html">Sobre nós</a></li>
                         <li><a href="../../../Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
                         <li><a id="btn_login" href="#" title="Botão de login"></a></li>
-                        <li><a href="#"><img id="icon" src="codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a></li>
+                        <li><a href="#"><img id="icon" src="../../../../Assets/Images/sun-solid.svg" alt="Modo de exibição"></a></li>
                     </ul>
 
                 </nav>
