--- a/codigo/Modules/Guilherme Costa/Sprint-3/HTML/login.html
+++ b/codigo/Modules/Guilherme Costa/Sprint-3/HTML/login.html
@@ -164,7 +164,7 @@
             }
             // Adiciona o usuário no banco de dados
             addUser(nome, login, senha, email);
-            alert('Usuário salvo com sucesso. Proceda com o login para ');
+            alert('Usuário salvo com sucesso.');
 
             // Oculta a div modal do login
             $('#loginModal').modal('hide');
