--- a/codigo/sobre.html
+++ b/codigo/sobre.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="./Modules/Guilherme Costa/Sprint-2/Styles/index.css" />
   <link rel="stylesheet" href="./Modules/Guilherme Costa/Sprint-2/Styles/sobre.css">
   <script src="./Modules/Guilherme Costa/Sprint-2/Scripts/baseSobre.js" defer></script>
-  <script type="module" src="./Modules/Guilherme Costa/Sprint-2/Scripts/index.js" defer></script>
   <script type="module" src="./Modules/Guilherme Costa/Sprint-3/Scripts/verifica_usuarioSobre.js"></script>
   <title>Buzzão - Sobre</title>
 </head>
@@ -26,7 +25,8 @@
       <div class="col-12">
         <nav>
 
-          <a href="../index.html"><img src="./Assets/Images/logo_buzzao.png" alt="Logo Buzzão" class="logo_buzzao" /></a>
+          <a href="../index.html"><img src="./Assets/Images/logo_buzzao.png" alt="Logo Buzzão"
+              class="logo_buzzao" /></a>
 
           <!-- Botões para responsividade em dispositivos mobile -->
           <input type="checkbox" id="check" placeholder="Botao de check - versao mobile" />
