ajuste de paginas sobre

--- a/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
+++ b/codigo/Modules/Guilherme Costa/Sprint-3/HTML/perfil.html
@@ -46,7 +46,7 @@
                     </label>
 
                     <ul class="menu_horizontal">
-                        <li><a href="../../../../sobre.html">Sobre nós</a></li>
+                        <li><a href="../../../../../sobre.html">Sobre nós</a></li>
                         <li><a href="../../../Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
                         <li><a id="btn_login" href="#" title="Botão de login"></a></li>
                         <li><a href="#"><img id="icon" src="../../../../Assets/Images/sun-solid.svg" alt="Modo de exibição"></a></li>
