--- a/codigo/Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html
+++ b/codigo/Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html
@@ -37,7 +37,7 @@
           </label>
 
           <ul class="menu_horizontal">
-            <li><a href="../../../../sobre.html">Sobre nós</a></li>
+            <li><a href="../../../../../sobre.html">Sobre nós</a></li>
             <li><a href="feedback.html">Feedback</a></li>
             <li><a id="btn_login" href="#">Login</a></li>
             <li><a href="#"><img id="icon" src="../../../../Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
