--- a/sobre.html
+++ b/sobre.html
@@ -10,11 +10,11 @@
   <!-- Instação bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-  <link rel="icon" href="./Assets/Images/icon.png">
-  <link rel="stylesheet" href="./Modules/Guilherme Costa/Sprint-2/Styles/index.css" />
-  <link rel="stylesheet" href="./Modules/Guilherme Costa/Sprint-2/Styles/sobre.css">
-  <script src="./Modules/Guilherme Costa/Sprint-2/Scripts/baseSobre.js" defer></script>
-  <script type="module" src="./Modules/Guilherme Costa/Sprint-3/Scripts/verifica_usuarioSobre.js"></script>
+  <link rel="icon" href="../codigo/Assets/Images/icon.png">
+  <link rel="stylesheet" href="../codigo/Modules/Guilherme Costa/Sprint-2/Styles/index.css" />
+  <link rel="stylesheet" href="./codigo/Modules/Guilherme Costa/Sprint-2/Styles/sobre.css">
+  <script src="./codigo/Modules/Guilherme Costa/Sprint-2/Scripts/baseIndex.js" defer></script>
+  <script type="module" src="./codigo/Modules/Guilherme Costa/Sprint-3/Scripts/verifica_usuario.js"></script>
   <title>Buzzão - Sobre</title>
 </head>
 
@@ -25,7 +25,7 @@
       <div class="col-12">
         <nav>
 
-          <a href="../index.html"><img src="./Assets/Images/logo_buzzao.png" alt="Logo Buzzão"
+          <a href="../index.html"><img src="./codigo/Assets/Images/logo_buzzao.png" alt="Logo Buzzão"
               class="logo_buzzao" /></a>
 
           <!-- Botões para responsividade em dispositivos mobile -->
@@ -37,9 +37,9 @@
 
           <ul class="menu_horizontal">
             <li><a href="sobre.html">Sobre nós</a></li>
-            <li><a href="Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
+            <li><a href="./codigo/Modules/Renato Ramalho/Sprints 2 e 3/HTML/feedback.html">Feedback</a></li>
             <li><a id="btn_login" href="#">Login</a></li>
-            <li><a href="#"><img id="icon" src="./Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
+            <li><a href="#"><img id="icon" src="./codigo/Assets/Images/sun-solid.svg" alt="Modo de exibição"></a>
             </li>
           </ul>
 
