--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
   <link rel="icon" href="../codigo/Assets/Images/icon.png">
-  <link rel="stylesheet" href="../codigo/Modules/Guilherme Costa/Sprint-2/Styles/index.css" />
+  <link rel="stylesheet" href="./codigo/Modules/Guilherme Costa/Sprint-2/Styles/index.css" />
   <link rel="stylesheet" href="./codigo/Modules/Guilherme Costa/Sprint-2/Styles/sobre.css">
   <script src="./codigo/Modules/Guilherme Costa/Sprint-2/Scripts/baseIndex.js" defer></script>
   <script type="module" src="./codigo/Modules/Guilherme Costa/Sprint-3/Scripts/verifica_usuario.js"></script>
