--- a/sobre.html
+++ b/sobre.html
@@ -52,16 +52,34 @@
   <main class="container-fluid">
 
     <section id="area_sobre">
+      <h3>Quem somos nós?</h3>
+      Somos um grupo de estudantes do 1º periódo de Engenharia de Software da Puc Minas que almejam melhor qualidade de
+      vida
+      nas ruas da grande BH. Que os meios de transportes públicos são um dos mais usados pela nossa sociedade não é
+      novidade para ninguém,
+      mas mesmo sendo o meio de locomoção príncipal, existem diversos problemas que afetam negativamente a qualidade da
+      grande maioria dos usuários.
+      <br>
+      <br>
+      <img src="./docs/relatorio/images/onibus_cheio.jfif" alt="onibus_cheio" width="500vw">
+      <p>Foto retirada do jornal Estado de Minas. Atualizado 17/03/2021 07:46</p>
+      <p></p>
+
       <h3>Por que o Buzzão foi construído?</h3>
       <p>O Buzzão foi construído para a disciplina de Trabalho Interdisciplinar de Aplicações Web do 1º
         período da faculdade de Engenharia de Software, PUC Minas. A ideia da aplicação seria informar aos seus
         usuários,
         a posição do ônibus em tempo real, de modo que fosse fácil de saber se um ônibus está ou não se aproximando do
         seu
-        ponto.</p>
+        ponto.
+        Através de tais caracteríticas, visamos através do uso do nosso site, auxiliar usuários do transporte público a
+        terem uma melhor experiência ao usar as linhas de ônibus.</p>
+
       <p>O trabalho foi desenvolvido ao longo de 5 meses, por Arthur Capanema, Guilherme Costa, Renato Ramalho, Miguel
         Castro e Mateus Guanabarino. Além disso, contamos com a ajuda e suporte dos nossos professores da disciplina,
         Felipe Augusto, Roberto Felipe e Rommel Vieira.</p>
+      <h3>Fale Conosco!</h3>
+      <p>Caso queira entrar em contato, mande uma mensagem para buzzao2022@hotmail.com. Agradecemos desde já!</p>
     </section>
 
   </main>
