--- a/sobre.html
+++ b/sobre.html
@@ -25,7 +25,7 @@
       <div class="col-12">
         <nav>
 
-          <a href="../index.html"><img src="./codigo/Assets/Images/logo_buzzao.png" alt="Logo Buzzão"
+          <a href="./index.html"><img src="./codigo/Assets/Images/logo_buzzao.png" alt="Logo Buzzão"
               class="logo_buzzao" /></a>
 
           <!-- Botões para responsividade em dispositivos mobile -->
