--- a/sobre.html
+++ b/sobre.html
@@ -61,7 +61,7 @@
       grande maioria dos usuários.
       <br>
       <br>
-      <img src="./docs/relatorio/images/onibus_cheio.jfif" alt="onibus_cheio" width="500vw">
+      <img id="imagem_onibus" src="./docs/relatorio/images/onibus_cheio.jfif" alt="onibus_cheio">
       <p>Foto retirada do jornal Estado de Minas. Atualizado 17/03/2021 07:46</p>
       <p></p>
 
